--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,7 +3,7 @@ on:
   release:
     types:
       - created
-  
+
 jobs:
   release:
     strategy:
@@ -16,8 +16,9 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Release binaries
-      uses: mcuadros/go-release-action@master
+      uses: wangyoucao577/go-release-action@master
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         goos: ${{ matrix.goos }}
         goarch: amd64
+        goversion: 1.17
